--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .main {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -22,7 +22,7 @@ a {
 
 .container {
     background-color: hsl(0, 0%, 12%);
-    height: 88%;
+    height: 530px;
     width: 352px;
     border-radius: 10px;
     padding: 20px 16px;
